# tcxVirtualCam

./: .gitignore  CMakeLists.txt  LICENSE  LICENSES.md  README.md  addon.json
docs/: DESIGN.md  INSTALL_macOS.md
example-basic/: addons.make
example-basic/src/: main.cpp  tcApp.cpp  tcApp.h
platform/mac/: README.md
platform/mac/extension/: README.md
platform/mac/extension/Resources/: Extension.entitlements  Info.plist
platform/mac/extension/Sources/: Branding.swift  TCVDeviceSource.swift  TCVProviderSource.swift  TCVStreamSource.swift  main.swift
platform/mac/host-bridge/: README.md
platform/mac/installer/: README.md
platform/mac/plugin/: CMakeLists.txt  Info.plist.in  PlugInMain.mm
platform/mac/shared/: README.md
scripts/: build_plugin_mac.sh  install_plugin_mac.sh  uninstall_plugin_mac.sh
src/: tcxVirtualCam.h  tcxVirtualCamSender.h  tcxVirtualCamStub.h
